# ETH-Sim

./: .env.example  .gitignore  CMakeLists.txt  INSTALL_DEPS.sh  README.md  build.sh  run.sh  run_all_tests.sh  test-websocket.sh
configs/: dex.yaml  oracle.yaml
include/sim_core/: config.hpp  gbm_engine.hpp  metrics.hpp  price_engine.hpp  rng.hpp  types.hpp  utils.hpp
src/core/: CMakeLists.txt
src/dex_sim/: CMakeLists.txt  main.cpp
src/oracle_sim/: CMakeLists.txt  main.cpp
static/: debug.html  dual.html  index.html
tests/: CMakeLists.txt  integration_test.sh  test_core.cpp
